29. BUG: Header actions wrapping

--- a/src/renderer/components/shared/link-button/LinkButton.scss
+++ b/src/renderer/components/shared/link-button/LinkButton.scss
@@ -9,6 +9,7 @@
         cursor: pointer;
         display: inline-block;
         outline: none;
+        white-space: nowrap;
     
         &:hover{
             color: $color-black;
